--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ version = $version
 description = AiCure’s OpenDBM is a software package that allows for calculation of digital biomarkers of health and functioning from video or audio of an individual’s behavior. It integrates existing tools for measurement of behavioral characteristics such as facial activity, voice, and movement into a single package for measurement of overall behavior. OpenDBM is designed for ease of use, expanding the availability of such tools to the wider scientific community.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/AiCure/open_dbm
+url = https://github.com/JayRGopal/open_dbm
 author = The OpenDBM Development Team
 author_email = opendbm@aicure.com
 license = AGPL-3.0
@@ -23,7 +23,7 @@ classifiers =
 project_urls =
     Bug Tracker = https://github.com/AiCure/open_dbm/issues
     Documentation = https://AiCure.github.io/open_dbm
-    Source Code = https://github.com/AiCure/open_dbm
+    Source Code = https://github.com/JayRGopal/open_dbm
 
 [options]
 packages = find:
